--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,470 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
+/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */ 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: var(--bg-img);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: var(--bg-color);
 }
-/*еуые*/
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
+  padding: 10px 10px 10px 10px;
+  margin-block-end: 40px;
+}
+
+.header__theme-menu-list {
+  display: grid;
+  row-gap: 0.625rem;
+  justify-content: end;
+}
+
+.header__theme-menu {
+  align-self: center;
+  font-size: var(--text-font-size);
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: 1px solid transparent;
+  color: var(--def-color);
+  font-size: var(--text-font-size);
+  text-transform: lowercase;
+  cursor: pointer;
+  line-height: 1.3125rem;
+  vertical-align: middle;
+  padding: 0 13px 3px;
+}
+
+.header__theme-menu-button:hover {
+  border-color: rgba(var(--def-color), 0.4);
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+}
+
+.header__theme-menu-button:focus {
+  outline: 0;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid currentColor;
+}
+
+.main__title {
+  color: var(--header-title);
+  text-shadow: 4px 4px 0 var(--header-shadow);
+  font-size: clamp(7.25rem, 6.9433rem + 1.3333vw, 7.5rem);
+  line-height: calc(129.53px - (129.53px - 95.7px));
+}
+
+.description {
+  max-width: 22.75rem;
+  justify-self: end;
+  align-self: center;
+  font-size: var(--text-font-size);
+  font-weight: var(--text-weight);
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::after,
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before {
+  right: 0.625rem;
+  top: 0.625rem;
+  border-top: 1px solid var(--def-color);
+  border-right: 1px solid var(--def-color);
+}
+
+.decorated-zone::after {
+  bottom: 0.625rem;
+  left: 0.625rem;
+  border-left: 1px solid var(--def-color);
+  border-bottom: 1px solid var(--def-color);
+}
+
+.rec-decor {
+  position: absolute;
+  right: 1.25rem;
+  top: 0.75rem;
+  display: flex;
+  align-items: center;
+  gap: 0.375rem;
+}
+
+.rec-decor::before {
+  content: "REC";
+  color: var(--def-color);
+}
+
+.rec-decor::after {
+  content: "";
+  border-radius: 50%;
+  box-shadow: 0 0 3px 3px var(--def-color);
+  background: var(--def-color);
+  width: 9px;
+  height: 9px;
+}
+
+.main__content {
+  padding: 0 10px 0 10px;
+  margin-top: 2.5rem;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 3.125rem;
+}
+
+.article__title {
+  margin-block-end: 1.25rem;
+  font-size: var(--text-font-size);
+  color: var(--def-color);
+}
+
+.title {
+  margin-block-end: 0.625rem;
+  font-size: var(--text-font-size);
+  line-height: var(--text-line-height);
+}
+
+.title-decor {
+  color: var(--decor-color-text);
+  background-color: var(--decor-color-back);
+}
+
+.break {
+  margin-block-end: 1.25rem;
+}
+
+.text {
+  font-size: var(--text-font-size);
+  line-height: var(--text-line-height);
+  color: var(--text-color);
+}
+
+.text__title {
+  color: var(--def-color);
+}
+
+.article .text:not(:last-of-type) {
+  margin-block-end: 1.25rem;
+}
+
+.boldness {
+  font-weight: var(--text-weight-regular);
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--def-color);
+}
+
+.link:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.1875rem;
+}
+
+.link:focus {
+  outline: 0;
+}
+
+.link:focus-visible {
+  border-bottom: 1px solid currentColor;
+}
+
+.pictures__section {
+  margin-block-end: 2.5rem;
+}
+
+.pictures__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 0.625rem;
+}
+
+.pictures__title {
+  width: 100%;
+}
+
+.picture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-content: center;
+  justify-items: center;
+  height: 100vh;
+}
+
+.footer__title {
+  text-align: center;
+  color: var(--header-title);
+  text-shadow: 2px 2px 0 var(--header-shadow);
+  font-size: clamp(7.25rem, 6.9433rem + 1.3333vw, 7.5rem);
+  line-height: calc(129.53px - (129.53px - 95.7px));
+}
+
+@media (768px <= width < 1024px) {
+  
+  .header {
+    padding: 20px 20px 20px 0;
+    margin-block-end: 3.75rem;
+  }
+
+  .main__content {
+    padding: 0 20px 0 20px;
+    margin-top: 3.75rem;
+  }
+
+  .main__title {
+    font-size: clamp(7.25rem, 6.9433rem + 1.3333vw, 7.5rem);
+    line-height: calc(129.53px - (129.53px - 95.7px));
+  }
+
+  .description {
+    max-width: 22.75rem;
+    justify-self: end;
+    align-self: center;
+    font-size: var(--text-font-size);
+    font-weight: bold;
+  }
+
+  .decorated-zone::before {
+    right: 1.25rem;
+    top: 1.25rem;
+  }
+  
+  .decorated-zone::after {
+    bottom: 1.25rem;
+    left: 1.25rem;
+  }
+  
+  .rec-decor {
+    right: 1.875rem;
+    top: 1.3125rem;
+  }
+
+  .article {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 1.25rem;
+    margin-block-end: 5rem;
+  }
+
+  .article__title {
+    grid-row: 1 / span 4;
+  }
+
+  .row__transform {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .article__title__column__trasform {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  }
+
+  .pictures__section {
+    margin-block-end: 3.75rem;
+  }
+
+  .picture {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  
+  .pictures__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.25rem;
+  }
+
+  .pictures__title {
+    grid-column: 1 / 4;
+  }
+  
+  .sunset {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+  
+  .ice {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+  
+  .tape {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+  }
+  
+  .books {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+  
+  .street {
+    grid-column: 2 / 4;
+    grid-row: 4 / 4;
+  }
+}
+
+
+@media (width>= 1024px) {
+  
+    .header {
+      padding: 20px 20px 20px 0;
+      margin-block-end: 3.75rem;
+    }
+
+    .header__theme-menu-list {
+      display: flex;
+      justify-content: center;
+      column-gap: 0.625rem;
+    }
+
+    .header__theme-menu {
+      align-self: flex-start;
+      padding-left: 1.125rem;
+    }
+
+    .main__content {
+      padding: 0 20px 0 20px;
+      margin-top: 3.75rem;
+    }
+  
+    .main__title {
+      line-height: var(--title-line-height);
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+  
+    .description {
+      max-width: 30.6875rem;
+      justify-self: end;
+      align-self: center;
+      font-size: var(--text-font-size);
+      font-weight: bold;
+    }
+  
+    .decorated-zone::before {
+      right: 1.25rem;
+      top: 1.25rem;
+    }
+    
+    .decorated-zone::after {
+      bottom: 1.25rem;
+      left: 1.25rem;
+    }
+    
+    .rec-decor {
+      right: 29px;
+        top: 26px;
+        line-height: 83%;
+    }
+  
+    .article {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      column-gap: 0.625rem;
+      margin-block-end: 5rem;
+    }
+  
+    .row__transform {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+
+    .table {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: min-content 1fr;
+        grid-auto-flow: column;
+        column-gap: 1.25rem;
+    }
+
+    .article__title {
+      grid-row: 1 / span 4;
+    }
+  
+    .article__title__column__trasform {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    }
+  
+    .pictures__section {
+      margin-block-end: 3.75rem;
+    }
+  
+    .picture {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+    
+    .pictures__container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1.25rem;
+    }
+  
+    .pictures__title {
+      grid-column: 1 / 4;
+    }
+    
+    .sunset {
+      grid-column: 1 / 3;
+      grid-row: 2;
+    }
+    
+    .ice {
+      grid-column: 3 / 4;
+      grid-row: 2 / 4;
+    }
+    
+    .tape {
+      grid-column: 1 / 2;
+      grid-row: 3 / 5;
+    }
+    
+    .books {
+      grid-column: 2 / 3;
+      grid-row: 3 / 4;
+    }
+    
+    .street {
+      grid-column: 2 / 4;
+      grid-row: 4 / 4;
+    }
+
+    .footer__title {
+      line-height: var(--title-line-height);
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+  }
