--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,8 @@
 .header {
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
-  height: 100vh;
+  min-height: 668px;
+  max-height: 100vh;
   padding: 10px 10px 10px 10px;
   margin-block-end: 40px;
 }
@@ -98,16 +99,19 @@
 
 .rec-decor {
   position: absolute;
-  right: 1.25rem;
-  top: 0.75rem;
+  right: 20px;
+  top: 14px;
   display: flex;
   align-items: center;
-  gap: 0.375rem;
+  gap: 5px;
 }
 
 .rec-decor::before {
   content: "REC";
   color: var(--def-color);
+  font-size: var(--text-font-size);
+  line-height: var(--text-font-size);
+  /* font-style: var(--text-font-size); */
 }
 
 .rec-decor::after {
@@ -115,8 +119,8 @@
   border-radius: 50%;
   box-shadow: 0 0 3px 3px var(--def-color);
   background: var(--def-color);
-  width: 9px;
-  height: 9px;
+  width: 8px;
+  height: 8px;
 }
 
 .main__content {
@@ -199,6 +203,8 @@
 }
 
 .pictures__title {
+  font-size: var(--text-font-size);
+  line-height: var(--text-line-height);
   width: 100%;
 }
 
@@ -214,7 +220,8 @@
   grid-template-columns: 1fr;
   align-content: center;
   justify-items: center;
-  height: 100vh;
+  min-height: 668px;
+  max-height: 100vh;
 }
 
 .footer__title {
@@ -225,9 +232,10 @@
   line-height: calc(129.53px - (129.53px - 95.7px));
 }
 
-@media (768px <= width < 1024px) {
+@media (768px <= width) {
   
   .header {
+    min-height: 1024px;
     padding: 20px 20px 20px 0;
     margin-block-end: 3.75rem;
   }
@@ -276,7 +284,7 @@
     grid-row: 1 / span 4;
   }
 
-  .row__transform {
+  .what_question {
     display: flex;
     flex-direction: column;
   }
@@ -332,12 +340,16 @@
     grid-column: 2 / 4;
     grid-row: 4 / 4;
   }
-}
 
+  .footer {
+    min-height: 1024px;
+  }
+}
 
 @media (width>= 1024px) {
   
     .header {
+      min-height: 768px;
       padding: 20px 20px 20px 0;
       margin-block-end: 3.75rem;
     }
@@ -383,8 +395,8 @@
     
     .rec-decor {
       right: 29px;
-        top: 26px;
-        line-height: 83%;
+      top: 26px;
+      line-height: 83%;
     }
   
     .article {
@@ -394,15 +406,14 @@
       margin-block-end: 5rem;
     }
   
-    .row__transform {
+    .what_question {
       display: grid;
       grid-template-columns: 1fr;
     }
 
     .table {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: min-content 1fr;
+        grid-template-columns: repeat(3, 1fr);
         grid-auto-flow: column;
         column-gap: 1.25rem;
     }
@@ -411,7 +422,7 @@
       grid-row: 1 / span 4;
     }
   
-    .article__title__column__trasform {
+    .article__title__column__title {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
@@ -466,5 +477,9 @@
     .footer__title {
       line-height: var(--title-line-height);
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+
+    .footer {
+      min-height: 768px;
     }
   }
