--- a/styles/style.css
+++ b/styles/style.css
@@ -41,11 +41,12 @@
 }
 
 .header__theme-menu-button:hover {
-  border-color: rgba(var(--def-color), 0.4);
+  border-color: var(--hover-border-color);
 }
 
 .header__theme-menu-button_active {
   pointer-events: none;
+  border: 1px solid currentColor;
 }
 
 .header__theme-menu-button:focus {
@@ -103,7 +104,8 @@
   top: 14px;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
+  line-height: 83%
 }
 
 .rec-decor::before {
@@ -161,12 +163,16 @@
   color: var(--text-color);
 }
 
-.text__title {
-  color: var(--def-color);
+.text:not(:last-of-type) {
+  margin-block-end: 1.25rem;
 }
 
-.article .text:not(:last-of-type) {
+.table__article:not(:last-child) {
   margin-block-end: 1.25rem;
+}
+
+.text__title {
+  color: var(--def-color);
 }
 
 .boldness {
@@ -175,12 +181,11 @@
 
 .link {
   text-decoration: none;
-  text-shadow: 2px 2px 0 var(--def-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 .link:hover {
-  text-decoration: underline;
-  text-underline-offset: 0.1875rem;
+  border-bottom: 1px solid;
 }
 
 .link:focus {
@@ -188,7 +193,7 @@
 }
 
 .link:focus-visible {
-  border-bottom: 1px solid currentColor;
+  border: 1px solid currentColor;
 }
 
 .pictures__section {
@@ -269,8 +274,8 @@
   }
   
   .rec-decor {
-    right: 1.875rem;
-    top: 1.3125rem;
+    right: 31px;
+    top: 25px;
   }
 
   .article {
@@ -283,6 +288,12 @@
   .article__title {
     grid-row: 1 / span 4;
   }
+
+  .article__title__column__title {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    }
 
   .what_question {
     display: flex;
@@ -350,8 +361,6 @@
   
     .header {
       min-height: 768px;
-      padding: 20px 20px 20px 0;
-      margin-block-end: 3.75rem;
     }
 
     .header__theme-menu-list {
@@ -365,11 +374,6 @@
       padding-left: 1.125rem;
     }
 
-    .main__content {
-      padding: 0 20px 0 20px;
-      margin-top: 3.75rem;
-    }
-  
     .main__title {
       line-height: var(--title-line-height);
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -377,10 +381,6 @@
   
     .description {
       max-width: 30.6875rem;
-      justify-self: end;
-      align-self: center;
-      font-size: var(--text-font-size);
-      font-weight: bold;
     }
   
     .decorated-zone::before {
@@ -394,84 +394,25 @@
     }
     
     .rec-decor {
-      right: 29px;
-      top: 26px;
       line-height: 83%;
     }
   
     .article {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
       column-gap: 0.625rem;
-      margin-block-end: 5rem;
-    }
-  
-    .what_question {
-      display: grid;
-      grid-template-columns: 1fr;
     }
 
     .table {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-flow: column;
-        column-gap: 1.25rem;
-    }
-
-    .article__title {
-      grid-row: 1 / span 4;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 1.25rem;
     }
   
     .article__title__column__title {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
     }
   
     .pictures__section {
       margin-block-end: 3.75rem;
-    }
-  
-    .picture {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-    
-    .pictures__container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1.25rem;
-    }
-  
-    .pictures__title {
-      grid-column: 1 / 4;
-    }
-    
-    .sunset {
-      grid-column: 1 / 3;
-      grid-row: 2;
-    }
-    
-    .ice {
-      grid-column: 3 / 4;
-      grid-row: 2 / 4;
-    }
-    
-    .tape {
-      grid-column: 1 / 2;
-      grid-row: 3 / 5;
-    }
-    
-    .books {
-      grid-column: 2 / 3;
-      grid-row: 3 / 4;
-    }
-    
-    .street {
-      grid-column: 2 / 4;
-      grid-row: 4 / 4;
     }
 
     .footer__title {
